Add content for session 1

--- a/src/view/campaigns/the-vanquished/notes/2022-06-15-session-1.md
+++ b/src/view/campaigns/the-vanquished/notes/2022-06-15-session-1.md
@@ -2,3 +2,14 @@
 title: "Session 1"
 ---
 
+### Plan
+
+Introduce [the hook].
+
+Describe [the village].
+
+Roll initiative, run the [wolf attack] event.
+
+[the hook]: ../../chapters/chapter-cold-to-the-bones/#adventure-hook
+[the village]: ../../chapters/chapter-aymeluma/
+[wolf attack]: ../chapters/chapter-aymeluma/#wolf-attack
