--- a/src/view/campaigns/the-vanquished/notes/2022-06-15-session-3.md
+++ b/src/view/campaigns/the-vanquished/notes/2022-06-15-session-3.md
@@ -3,3 +3,8 @@ title: "Session 3"
 ---
 
 ### Plan
+
+- Return to village. Check for 4 random encounters.
+- Start [attack in the night] event
+
+[attack in the night]: ../../chapters/chapter-aymeluma/#attack-in-the-night
