Add more for session 4

--- a/src/view/campaigns/the-vanquished/notes/2022-06-15-session-4.md
+++ b/src/view/campaigns/the-vanquished/notes/2022-06-15-session-4.md
@@ -1,15 +1,33 @@
 ---
-title: "Session 3"
+title: "Session 4"
 ---
 
-### Plan
+### Easing Water Inn
 
-Pub trip:
+- Ask about what they found out about the Forest of Beasts
+- Silvanus connection:
+  - Villagers use the shrine nearby
+  - Occasional visits to trade from the nearby druids
+- Aien:
+  - Maiele took him home one night
 
-- Ask about what they found out about the forest of beasts in trade for more
-  information
+### Council
 
-Council will ask for information:
+A bystander to the intimidation of the blacksmith has spoken to the council. The
+council will send Servant Orihil to request their audience at the thirteenth
+hour.
 
-- Ask why they're intimidating villagers (disappointed in Aien)
-- Ask what progress they've made so far
+Remind the characters about the doors, each with the names of the elves.
+
+The council wants to talk about:
+
+- What progress they've made so far?
+- Why are they intimidating villagers (disappointed in Aien)?
+- What else are they going to do to prevent and catch the attacker before
+  tonight?
+- Remind them that they have a whole day to investigate before night.
+- State a worry that Lady Glynlamin has faked it to distract from her failings.
+- Have they searched Lady Glynlamin's house for any evidence about it being
+  faked?
+
+Will Maiele attack them with the vine blights after the audience?
