--- a/src/view/campaigns/the-vanquished/notes/2022-06-15-session-4.md
+++ b/src/view/campaigns/the-vanquished/notes/2022-06-15-session-4.md
@@ -4,12 +4,16 @@ title: "Session 4"
 
 ### Easing Water Inn
 
-- Ask about what they found out about the Forest of Beasts
+- He would like to hear a story about what happened:
+  - In the Forest of Beasts
+  - To Lady Glynlamin
 - Silvanus connection:
-  - Villagers use the shrine nearby
+  - Some of the villagers use the shrine nearby
   - Occasional visits to trade from the nearby druids
 - Aien:
-  - Maiele took him home one night
+  - Orihil took Aien home one night after he was so drunk
+
+Use a second set vine blights to attack them if they go to the hot springs
 
 ### Council
 
@@ -22,12 +26,10 @@ Remind the characters about the doors, each with the names of the elves.
 The council wants to talk about:
 
 - What progress they've made so far?
-- Why are they intimidating villagers (disappointed in Aien)?
+- Why are they intimidating villagers? Demand that they don't in the future.
 - What else are they going to do to prevent and catch the attacker before
   tonight?
-- Remind them that they have a whole day to investigate before night.
-- State a worry that Lady Glynlamin has faked it to distract from her failings.
-- Have they searched Lady Glynlamin's house for any evidence about it being
-  faked?
-
-Will Maiele attack them with the vine blights after the audience?
+- Maiele will state two things:
+  - A worry that Lady Glynlamin might be faking it to distract from her failings
+    in defending the village.
+  - She saw Lady Glynlamin go to the statue of Silvanus the other night.
